add first section with the logo

--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="container-fluid" id="section1">
+    <div class="row" id="background1">
+        <div class="col-md-12">
+            <img src="/images/logo.png" class="img-fluid">
+        </div>
+    </div>
   
 </body>
 </html>
