add header to section 1

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
             <img src="/images/logo.png" class="img-fluid">
         </div>
     </div>
+    <div class="row">
+      <div class="col-md-12">
+          <strong><h1>WELCOME</h1></strong><br>
+          <strong>TO DELANI STUDIO</strong><br>
+      </div>
+  </div>
   
 </body>
 </html>
