--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
           <strong>TO DELANI STUDIO</strong><br>
       </div>
   </div>
-  
+  <div class="row">
+    <div class="col-md-12">
+        <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</p>
+    </div>
+</div>
+
 </body>
 </html>
