add a div and added mouse image

--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
           <strong>TO DELANI STUDIO</strong><br>
       </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
+    <div class="row">
+      <div class="col-md-12">
         <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT.</p>
     </div>
+  </div>
+    <div class="row">
+      <div class="col-md-12">
+      <img src="./images/mouse_click.png" class="img-fluid" id="mouse">
+    </div>
+  </div>
 </div>
-
 </body>
 </html>
