--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <img src="/images/logo.png" class="img-fluid">
         </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
+      <div class="row">
+        <div class="col-md-12">
           <strong><h1>WELCOME</h1></strong><br>
           <strong>TO DELANI STUDIO</strong><br>
-      </div>
+        </div>
   </div>
     <div class="row">
       <div class="col-md-12">
@@ -33,5 +33,15 @@
     </div>
   </div>
 </div>
+<div class="container" id="section2">
+  <strong><h1>ABOUT US</h1></strong>
+  <p>
+   When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are intergrated, interactive and agile.<br>
+   Our approach unites design, development an product management to create exceptional products.<br>
+   We start each project by understanding your business goals, there's needs and the the product requirements.<br>
+   Then we help translate them into effective and elegant solutions.
+  </p>
+</div>
+
 </body>
 </html>
