--- a/index.html
+++ b/index.html
@@ -50,6 +50,47 @@
    Based on your requirements, we can provide a complete offering or just the pieces you need.
   </p>
 </div>
-
+<div class="container" id="section4">
+  <div class="row">
+      <div class="col-md-12">
+          <strong><h1>WHAT WE DO</h1></strong>
+      </div>
+      <div class="col">
+          <div class="explanation1">
+              <p>
+               Our design practice offers a full range of services including brand strategy, interaction and visual design and user experience testing.<br>
+               Throughout your project, our designers create and implement visual design and workflows, solicit user feedback and work with you to make sure what gets built is what is needed.
+              </p>
+          </div>
+          <div class="design1">
+              <img src="./images/design_icon.png">
+              <p>DESIGN</p>
+          </div>
+      </div>
+      <div class="col">
+          <div class="explanation2">
+              <p>
+               All engineers are fluent in the latest enterprise, mobile and web development technologies.<br>
+               They collaborate with your team to write, and improve code on a daily basis, using proven practices such as test-driven development and pair programming.
+              </p>
+          </div>
+          <div class="development">
+              <img src="./images/dev_icon.png">
+              <p>DEVELOPMENT</p>
+          </div>
+      </div>
+      <div class="col">
+          <div class="explanation3">
+              <p>
+               Planning and development is iterative. Because we are constantly coding and testing, the products we build are always ready to go live.<br>
+               This iterative process allows for changes as business requirements evolve.
+              </p>
+          </div>
+          <div class="management">
+              <img src="./images/product_icon.png">
+              <p>PRODUCT MANAGEMENT</p>
+          </div>
+      </div>
+      
 </body>
 </html>
