--- a/index.html
+++ b/index.html
@@ -158,6 +158,24 @@
          </div>
      </div>
     </div>
-    
+    div class="container-fluid" id="section6">
+      <div class="row">
+          <div class="col-md-12">
+              <h3>CONTACT US</h3>
+              <div id="contact" class="container-fluid d-flex flex-wrap align-content-center justify-content-around">
+                  <form action="https://gmail.us17.list-manage.com/subscribe/post?u=3d9a82ba1a3bdac55b2aceefe&amp;id=e3713bdae4" method="post" id="embedded-form" name="embedded-form" class="validate" target="_blank" novalidate id="submission">
+                      <input type="text" placeholder="Enter Name">
+                      <input type="email" name="" id="mail" placeholder="Enter Email">
+                      <textarea name="textarea" id="" cols="10" rows="5" placeholder="Message (optional)"></textarea>
+                      <input type="submit">
+            
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+</div>
+
 </body>
 </html>
