--- a/index.html
+++ b/index.html
@@ -176,6 +176,19 @@
   </div>
 </div>
 </div>
+footer>
+    <a href=""><img src="./images/behance.png" alt="behance icon"></a>
+    <a href=""><img src="./images/dribble.png" alt="dribble icon"></a>
+    <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
+    <a href=""><img src="./images/flickr.png" alt="flicker icon"></a>
+    <a href=""><img src="./images/g_plus.png" alt="g plus icon"></a>
+    <a href=""><img src="/images/pinterest.png" alt="pinterest icon"></a>
+    <a href=""><img src="./images/skype.png" alt="skype icon"></a>
+    <a href=""><img src="./images/stumble_upon.png" alt="stumble upon icon"></a>
+    <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
+    <a href=""><img src="./images/you_tube.png" alt="youtube icon"></a>
+    <p>DELANI STUDIO <br>2022</p>
+</footer>
 
 </body>
 </html>
