--- a/index.html
+++ b/index.html
@@ -189,6 +189,6 @@ footer>
     <a href=""><img src="./images/you_tube.png" alt="youtube icon"></a>
     <p>DELANI STUDIO <br>2022</p>
 </footer>
-
+<script defer src="script.js"></script>
 </body>
 </html>
