--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
          </div>
      </div>
     </div>
-    div class="container-fluid" id="section6">
+    <div class="container-fluid" id="section6">
       <div class="row">
           <div class="col-md-12">
               <h3>CONTACT US</h3>
