--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delani</title>
-  <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css">
+  <!-- <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7_dtp.css" rel="stylesheet" type="text/css"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="styles.css">
@@ -163,7 +163,7 @@
       <div class="row">
           <div class="col-md-12">
               <h3>CONTACT US</h3>
-              <div id="mc_embed_signup">
+              <div id="contact" class="container-fluid d-flex flex-wrap align content-center justify-content-around">
                 <form action="https://127.us14.list-manage.com/subscribe/post?u=45f25cf4a96ff34d883bad38f&amp;id=c686e0761a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate id="submission">
                       <input type="text" placeholder="Enter Name">
                       <input type="email" name="" id="mail" placeholder="Enter Email">
@@ -177,7 +177,7 @@
   </div>
 </div>
 </div>
-footer>
+<footer>
     <a href=""><img src="./images/behance.png" alt="behance icon"></a>
     <a href=""><img src="./images/dribble.png" alt="dribble icon"></a>
     <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
