--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container-fluid" id="section1">
     <div class="row" id="background1">
         <div class="col-md-12">
-            <img src="/images/logo.png" class="img-fluid">
+            <img src="./images/logo.png" class="img-fluid">
         </div>
     </div>
       <div class="row">
@@ -185,7 +185,7 @@
     <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
     <a href=""><img src="./images/flickr.png" alt="flicker icon"></a>
     <a href=""><img src="./images/g_plus.png" alt="g plus icon"></a>
-    <a href=""><img src="/images/pinterest.png" alt="pinterest icon"></a>
+    <a href=""><img src=",/images/pinterest.png" alt="pinterest icon"></a>
     <a href=""><img src="./images/skype.png" alt="skype icon"></a>
     <a href=""><img src="./images/stumble_upon.png" alt="stumble upon icon"></a>
     <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
