--- a/index.html
+++ b/index.html
@@ -94,10 +94,15 @@
               <p>PRODUCT MANAGEMENT</p>
           </div>
       </div>
-      <div class="container" id="section5">
+      <div class="section5">
+      <div class="container-fluid">
+          <div class="portfolio">
+          <h1>PORTFOLIO</h1>
+        </div>
+
         <div class="row">
             <div class="col-md-4">
-                <h1>PORTFOLIO</h1>
+                <!-- <h1>PORTFOLIO</h1> -->
             </div>
         </div> 
         <div class="row">
@@ -159,7 +164,8 @@
                  </div>
              </div>
          </div>
-     </div>
+    </div>
+    </div>
     </div>
     <div class="container-fluid" id="section6">
       <div class="row">
