--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <a href=""><img src="./images/facebook.png" alt="facebook icon"></a>
     <a href=""><img src="./images/flickr.png" alt="flicker icon"></a>
     <a href=""><img src="./images/g_plus.png" alt="g plus icon"></a>
-    <a href=""><img src=",/images/pinterest.png" alt="pinterest icon"></a>
+    <a href=""><img src="./images/pinterest.png" alt="pinterest icon"></a>
     <a href=""><img src="./images/skype.png" alt="skype icon"></a>
     <a href=""><img src="./images/stumble_upon.png" alt="stumble upon icon"></a>
     <a href=""><img src="./images/twitter.png" alt="twitter icon"></a>
