--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <h3>CONTACT US</h3>
               <div id="contact" class="container-fluid d-flex flex-wrap align content-center justify-content-around">
                 <form action="https://127.us14.list-manage.com/subscribe/post?u=45f25cf4a96ff34d883bad38f&amp;id=c686e0761a" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate id="submission">
-                      <input type="text" placeholder="Enter Name">
+                      <input class="name" type="text" placeholder="Enter Name">
                       <input type="email" name="" id="mail" placeholder="Enter Email">
                       <textarea name="textarea" id="" cols="10" rows="5" placeholder="Message (optional)"></textarea>
                       <input type="submit">
